force-app/main/default/objects/Zoho_Invoice__c/Zoho_Invoice__c.object-meta.xml
<CustomObject>
    <description>Zoho Invoices</description>
    <label>Zoho Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoho Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>