force-app/main/default/objects/Zoho_Invoice__c/fields/Age_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_In_Days__c</fullName>
    <label>Age In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>