force-app/main/default/objects/Zoho_Invoice__c/fields/Age_Tier__c.field-meta.xml
<CustomField>
    <fullName>Age_Tier__c</fullName>
    <label>Age Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. 0 - 30 days</fullName>
            </value>
            <value>
                <fullName>2. 31 - 60 days</fullName>
            </value>
            <value>
                <fullName>3. 61 - 90 days</fullName>
            </value>
            <value>
                <fullName>4. 91 - 180 days</fullName>
            </value>
            <value>
                <fullName>5. Above 180 days</fullName>
            </value>
            <value>
                <fullName>6. Negative - Not Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>