force-app/main/default/objects/Zoho_Invoice__c/fields/Balance_BCY__c.field-meta.xml
<CustomField>
    <fullName>Balance_BCY__c</fullName>
    <label>Balance (BCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>