force-app/main/default/objects/Zoho_Invoice__c/fields/Discount_Amount_BCY__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_BCY__c</fullName>
    <label>Discount Amount (BCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>