force-app/main/default/objects/Zoho_Invoice__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>