force-app/main/default/objects/Zoho_Invoice__c/fields/Total_BCY__c.field-meta.xml
<CustomField>
    <fullName>Total_BCY__c</fullName>
    <label>Total (BCY)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>