force-app/main/default/objects/Zoho_Invoice__c/fields/Write_Off_Amount_BCY__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Amount_BCY__c</fullName>
    <label>Write Off Amount (BCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>